# mangle-website-2

./: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
hero-wasm/: Cargo.toml  modulize.js
hero-wasm/src/: lib.rs  shader.wgsl  sim.rs  state.rs
pingme/: Cargo.toml
pingme/src/: main.rs
src/: app.html
src/hero-wasm/src/: lib.rs  shader.wgsl  sim.rs  state.rs
src/lib/: fancyPanel.svelte  greeting.svelte  heroImage.svelte  roulette.svelte  threeBody.svelte  usrInsta.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/blogs/maturing/: +page.svelte
src/routes/cs1420/lab-feedback/: +page.server.ts  +page.svelte
src/routes/cs1420/oop2/: +page.svelte
src/routes/pingme/: +page.server.ts  +page.svelte
src/routes/pingme/update/: +server.ts
src/routes/r/[id]/: +server.ts
src/routes/resume/: +page.svelte  +page.ts
static/: resume.html
