[package]
name = "hero-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wgpu = { version = "22.1.0", features = ["webgl"] }
winit = "0.29"

[dependencies.web-sys]
version = "0.3.70"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement'
]
