[package]
name = "hero-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.18.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
nalgebra = { version = "0.33.0", features = [] }
rapier2d = { version = "0.22.0", features = ["wasm-bindgen", "enhanced-determinism"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-timer = "0.2.5"
wgpu = { version = "22.1.0", features = ["webgl"] }
winit = "0.29"

[dependencies.web-sys]
version = "0.3.70"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement'
]
